# Deltect

./: .gitignore  README.md  VersionUpdate.md  VersionUpdate.md.m  cli.py  config.py  download_references.sh  main.py  pyproject.toml  requirements.txt  tree.html
data/: __init__.py  api.py  data_processor.py  preprocessing.py  ref_genome_data.py
extraction/: deletion_extraction.py
input/: bam_process.py
notebooks/: example_usage.ipynb
output/: model_results.json  processed_variants.json  raw_variants.json  test_predictions.csv
output/validation/truvari_bench/: log.txt
report/: report.aux  report.tex
scripts/: best_distribution.py
training/: model.py
utils/: conv.py  plot.py
utils/pipelines/: inference_pipeline.py  training_pipeline.py
validation/: truvari_validator.py
